# zephyr_framework

./: .clang-tidy  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CMakeLists.txt  Doxyfile  Kconfig  Kconfig.app  Kconfig.zephyr  Kconfig_proprietary  LICENSE  LICENSE_COMMERCIAL.md  README.md  README_CN.md  README_EN.md  prj.conf  prj_example_gpio_uart.conf  prj_fast_boot.conf  prj_min.conf  prj_sram.conf  prj_tiny.conf  prj_ultra_fast_boot.conf  proprietary_modules.conf  west.yml  zephyr_config.env
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
boards/: mimxrt1050_fire_mimxrt1052_qspi.overlay  overlay.dts
docs/: DEVELOPER_GUIDE.md  FREESTANDING_APP.md  IPC服务扩展特性规划.md  OTA与存储扩展指南.md  RELEASE_CHECKLIST.md  SIL2_REVIEW_EVENT_SYSTEM.md  TEMPLATE_PRODUCT_EXTENSIONS.md  Thread_IPC_Service模块使用说明.md  Thread_IPC服务使用说明.md  Thread_IPC模块集成指南.md  VERSION_MANAGEMENT.md  ZEPHYR_VERSION.md  Zephyr应用开发与服务指南.md  Zephyr版本与CI说明.md  Zephyr设备树与内存配置手册.md  watchdog_test_guide.md  事件系统详细使用说明.md  单元测试与持续集成说明.md  参与贡献与代码规范.md  发布检查清单.md  安全与密钥管理说明.md  工程扩展.md  常见问题与故障排除.md  开发者入门指南.md  开发者指南.md  文档索引.md  板型迁移指南.md  模块系统详细使用说明.md  烧录与调试快速指南.md  独立应用构建说明.md  环境搭建与配置指南.md  系统服务使用说明.md  脚本与工具说明.md  设备树与内存配置手册.md  配置方案对比指南.md  项目配置项说明.md
docs/en/00-getting-started/: 01-quick-start.md  02-doc-index.md  03-glossary.md  04-developer-guide.md
docs/en/10-environment-build/: 11-environment-setup.md  12-freestanding-app-build.md  13-board-porting-guide.md
docs/en/20-architecture/: 21-modular-design-methodology.md  22-modular-design-detailed.md  23-framework-internals.md
docs/en/50-testing-ci/: 51-unit-testing-ci.md  52-ci-platform-setup.md  53-hardware-testing.md  54-watchdog-test-guide.md
docs/superpowers/specs/: 2026-04-17-event-memory-slab-design.md
docs/zh-CN/: QUICK_REFERENCE.md
docs/zh-CN/00-入门/: 01-5分钟快速体验.md  02-文档索引.md  03-术语速查卡片.md  04-开发者入门指南.md
docs/zh-CN/10-环境与构建/: 11-环境搭建与配置指南.md  12-独立应用构建说明.md  13-板型迁移指南.md
docs/zh-CN/20-架构设计/: 21-模块化软件设计方法论.md  22-模块化软件设计的详细方法.md  23-框架核心技术实现细节.md
docs/zh-CN/30-核心模块/: 31-事件系统详细使用说明.md  32-模块系统详细使用说明.md  33-Thread_IPC服务使用说明.md  34-Thread_IPC模块集成指南.md  35-IPC服务扩展特性规划.md  36-系统服务使用说明.md
docs/zh-CN/40-应用开发/: 41-Zephyr应用开发与服务指南.md  42-项目配置项说明.md  43-配置方案对比指南.md  44-设备树与内存配置手册.md
docs/zh-CN/50-测试与CI/: 51-单元测试与持续集成说明.md  52-CI平台配置保姆级手册.md  53-硬件测试运行指南.md  54-watchdog_test_guide.md
docs/zh-CN/60-调试与排错/: 61-烧录与调试快速指南.md  62-常见问题与故障排除.md  63-脚本与工具说明.md
docs/zh-CN/70-发布与产品化/: 72-Zephyr版本与CI说明.md  73-发布检查清单.md  74-OTA与存储扩展指南.md  75-安全与密钥管理说明.md
docs/zh-CN/80-贡献与维护/: 81-参与贡献与代码规范.md  82-文档改进建议.md
scripts/: analyze_map.sh  build_all.sh  bump_version.py  generate_docs.ps1  lint_docs.py  module_config.py  package_release.ps1  package_release.sh  patch_kconfig.py  proprietary_manage.bat  proprietary_manage.ps1  proprietary_manage.sh  setup_env.bat  setup_env.ps1  setup_env.sh
src/app/: app_config.h  app_kv.c  app_kv.h  app_main.c  app_main.h  app_version.c  app_version.h  app_version_config.h.in
src/core/: event_dispatcher.c  event_dispatcher.h  event_dispatcher_autoinit.c  event_memory.c  event_memory.h  event_queue.c  event_queue.h  event_system.c  event_system.h  event_system_compat.c  event_system_compat.h
src/data_bus/: Kconfig  data_bus.c  data_bus.h  data_bus_channel.c  data_bus_consumer.c  data_bus_event_bridge.c  data_bus_memory.c
src/modules/: example_module_a.c  example_module_a.h  example_module_b.c  example_module_b.h  example_module_gpio.c  example_module_gpio.h  example_module_ipc.c  example_module_ipc.h  example_module_multi_dep.c  example_module_multi_dep.h  example_module_uart.c  example_module_uart.h  module_base.h  module_manager.c  module_manager.h  module_manager_compat.c  module_manager_compat.h
src/modules/ipc_service/: CMakeLists.txt  Kconfig  ipc_service.c  ipc_service.h  ipc_service_event.c  ipc_service_event.h  ipc_service_example.c  ipc_shared_mem.c  ipc_shared_mem.h
src/modules_examples/: example_module_a.c  example_module_a.h  example_module_b.c  example_module_b.h  example_module_gpio.c  example_module_gpio.h  example_module_ipc.c  example_module_ipc.h  example_module_multi_dep.c  example_module_multi_dep.h  example_module_uart.c  example_module_uart.h
src/services/: sys_log.c  sys_log.h  sys_memory.c  sys_memory.h  sys_timer.c  sys_timer.h  sys_watchdog.c  sys_watchdog.h
tests/: CMakeLists.txt  Kconfig  README.md  prj.conf  prj_test_watchdog.conf  test_event_dispatcher.c  test_event_queue.c  test_event_system.c  test_example_module_a.c  test_example_module_b.c  test_example_module_gpio.c  test_example_module_multi_dep.c  test_example_module_uart.c  test_ipc_service.c  test_module_manager.c  test_sys_log.c  test_sys_memory.c  test_sys_timer.c  test_sys_watchdog.c
tests/lint_docs/: test_lint_docs.py
